[M6-FIXES] - remove banner for mobile - update styles for modal popup; close button now always visible during the scroll - hide mobile cart after clicking to checkout - update mainpage styles

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -695,13 +695,14 @@ font-weight: 400;line-height: 1.5;text-align: center;white-space: nowrap;}
 }
 
 .btn-icon--close {
-  background: url(../images/cancel_cross2.png) no-repeat;
+  background: url(../images/cancel_cross2.png) center no-repeat;
   background-size: 20px;
-  width:20px;
-  height:20px;
+  width:40px;
+  height:40px;
   position: absolute;
-  top: 1.5rem;
-  right: 1.5rem;
+  top: 1rem;
+  right: 1rem;
+  z-index: 900;
 }
 
 .space-bw {
@@ -1875,7 +1876,8 @@ a {
     font-size: 23px;
   }
   .product-price,
-  .product-desc {
+  .product-desc,
+  .product-weight {
     font-size: .7rem;
   }
   .product-top.fixed {
@@ -1967,6 +1969,36 @@ a {
     width: 80%;
   }
 
+  .btn-icon--close {
+    position: fixed;
+  }
+}
+
+/* mobile landscape */
+@media (min-width: 576px) and (max-width: 767.98px) {
+  .top-nav {
+    height: 40px;
+  }
+  .product h2 {
+    font-size: 23px;
+  }
+  .product-price,
+  .product-desc {
+    font-size: .7rem;
+  }
+  .product-top.fixed {
+    position: fixed;
+    top: 60px;
+  }
+  .header-wrap.top-bar-open + .aw-main .product-top.fixed {
+    top: 89px;
+  }
+  .header-wrap.top-bar-open + .aw-main {
+    padding-top: 28px;
+  }
+  .btn-icon--close {
+    position: fixed;
+  }
 }
 
 .top-bar {
